Fix 'Print to File (PDF) broken on KDE4 in 4.8.4 on Slackware'

Using the KHtmlView quick print support does not work if a user does
not select the default system printer in kmymoney.

BUG:412366
FIXED-IN:4.8.5